# factory-dame

./: .mcp.json  CLAUDE.md  README.md
.aswritten/memories/: 2026-04-08-1-project-origin-and-motivation.md  2026-04-08-2-generative-interests-particles-oscillators.md  2026-04-15-1-neurodynamics-engine-project.md  2026-04-15-1-pipeline-tool-decisions.md  2026-04-16-1-feedback-skip-ticketing-on-side-projects.md  2026-04-16-4-vision-live-nrt-to-modular-bridge.md  (+6 more)
backlog/: config.yml
neurodynamics/engine/: .gitignore  README.md  config.toml  inspect_state.py  make_test.py  pyproject.toml
neurodynamics/engine/docs/: vcv_patch.md
neurodynamics/engine/src/neurodynamics/: __init__.py  cochlea.py  grfnn.py  live.py  live_view.py  modelock.py  osc_out.py  perceptual.py  router.py  run.py  state_log.py  tuning.py  viewer.py  voices.py
neurodynamics/engine/test_audio/: .gitignore  README.md  tracklist.toml
neurodynamics/engine/tests/: analyze_voice_evolution.py  benchmark_engine.py  check_tuning.py  compare_offline_vs_live.py  conftest.py  diagnose_voices.py  generate_baselines.py  real_audio_summary.py  rip_corpus.py  synth_ground_truth.py  test_cochlea.py  test_delay.py  test_grfnn.py  test_hebbian.py  test_live.py  test_live_view.py  test_modelock.py  test_noise.py  test_perceptual.py  test_pipeline.py  test_regression.py  test_residual.py  test_router.py  test_two_layer_pulse.py  test_voices.py  test_voices_real_audio.py  test_w_snapshots.py  trigger_roundtrip.py  vcv_live_roundtrip.py
neurodynamics/engine/tests/baselines/: pulse_train_120bpm.json  sine_440hz.json
(+40 files in other folders)
