[project]
name = "neurodynamics-engine"
version = "0.1.0"
description = "Neural Resonance Theory oscillator engine for audio-driven generative systems"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "python-osc>=1.8",
    "pyarrow>=16",
    "matplotlib>=3.9",
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8",
    "numba>=0.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[project.scripts]
nd-run = "neurodynamics.run:main"
nd-view = "neurodynamics.viewer:main"
nd-route = "neurodynamics.router:main"
nd-live = "neurodynamics.live:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neurodynamics"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that run the full pipeline (takes seconds)",
    "regression: compare against stored baseline stats",
]
